--- a/CH14/build.gradle
+++ b/CH14/build.gradle
@@ -1,8 +1,62 @@
+//plugins {
+//    id 'java'
+//    id 'org.springframework.boot' version '3.1.0'
+//    id 'io.spring.dependency-management' version '1.1.0'
+//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+//}
+//
+//group = 'com.example'
+//version = '0.0.1-SNAPSHOT'
+//sourceCompatibility = '17'
+//
+//configurations {
+//    compileOnly {
+//        extendsFrom annotationProcessor
+//    }
+//}
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+//    compileOnly 'org.projectlombok:lombok'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//
+//    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+//    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+//    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+//}
+//
+//tasks.named('test') {
+//    useJUnitPlatform()
+//}
+//
+////querydsl 추가 시작
+//def querydslDir = "$buildDir/generated/querydsl"
+//
+//sourceSets {
+//    main.java.srcDirs += [ querydslDir ]
+//}
+//
+//tasks.withType(JavaCompile) {
+//    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+//}
+//
+//clean.doLast {
+//    file(querydslDir).deleteDir()
+//}
+////querydsl 추가 끝
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
-    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.example'
@@ -23,43 +77,35 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // QueryDSL 설정
     implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-//querydsl 추가 시작 (위에 plugin 추가 부분과 맞물림)
+//querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
-querydsl {
-    jpa = true
-    querydslSourcesDir = querydslDir
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
 }
 
-sourceSets { // IDE의 소스 폴더에 자동으로 넣어준다.
-    main.java.srcDir querydslDir
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
 }
 
-configurations {
-    querydsl.extendsFrom compileClasspath // 컴파일이 될때 같이 수행
-}
-
-compileQuerydsl {
-    options.annotationProcessorPath = configurations.querydsl // Q파일을 생성해준다.
+clean.doLast {
+    file(querydslDir).deleteDir()
 }
 //querydsl 추가 끝
